<resources>
    <string name="app_name">My Workouts</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_programs_list">ProgramsListActivity</string>

    <string name="do_pushups">Do pushups and press button</string>
    <string name="do_pullups">Do pullups and press button</string>
    <string name="do_squats">Do squats and press button</string>
    <string name="do_dips">Do dips and press button</string>
    <string name="rest">Rest between sets necessary time</string>
    <string name="_30_sec">+ 30 sec</string>
    <string name="skip_the_pause">Skip the Pause</string>
    <string name="change_program">Change Program</string>

    <string name="prog_day">Day %1$d:</string>
    <string name="prog_total">Total: %1$d</string>
    <string name="prog_timer">01 : 00</string>
    <string name="prog_reps_button">Set %1$d: do %2$d reps</string>
    <string name="dialog_training_complete">Training completed!</string>
    <string name="dialog_program_completed">Program completed!</string>
    <string name="dialog_next_training">Next training after 48 hr!</string>
    <string name="dialog_next_program">Choose next program after two days. If you need you can repeat this program.</string>
    <string name="ok">OK</string>

    <string name="select">Select your program</string>
    <string name="press_button">Press button and select program</string>
    <string name="program">Program</string>
    <string name="day">Day</string>
    <string name="total">Total</string>
    <string name="list_of_exercises">List of Exercises</string>
    <string name="pushups">Pushups</string>
    <string name="pullups">Pullups</string>
    <string name="squats">Squats</string>
    <string name="dips">Dips</string>

</resources>
