<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.r4mstein.myworkouts.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/chest_1"/>

                <TextView
                    android:id="@+id/main_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/do_pushups"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/program_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_label"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="Program Name"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/program_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/program_name"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="Day 1:"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/program_reps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/program_day"
                    android:layout_marginLeft="4dp"
                    android:layout_toEndOf="@+id/program_day"
                    android:layout_toRightOf="@+id/program_day"
                    android:text="2  3  4  5  6"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/program_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/program_day"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="Total: 25"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <com.andexert.library.RippleView
                    android:id="@+id/wrapper_reps_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/program_total"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    app:rv_zoom="true">

                    <Button
                        android:id="@+id/program_do_button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@color/colorAccent"
                        android:onClick="onClickDoButton"
                        android:text="Do 10 reps"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </com.andexert.library.RippleView>

                <TextView
                    android:id="@+id/program_rest_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wrapper_reps_button"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/rest"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/program_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/program_rest_text"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/prog_timer"
                    android:textColor="@color/colorWhite"
                    android:textSize="80sp"
                    android:textStyle="bold"/>

                <com.andexert.library.RippleView
                    android:id="@+id/wrapper_plus_sec_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/program_timer"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    app:rv_zoom="true">

                    <Button
                        android:id="@+id/program_plus_sec_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:onClick="onClickPlusSecButton"
                        android:text="@string/_30_sec"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/wrapper_skip_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wrapper_plus_sec_button"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    app:rv_zoom="true">

                    <Button
                        android:id="@+id/program_skip_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:onClick="onClickSkipButton"
                        android:text="@string/skip_the_pause"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    android:id="@+id/wrapper_change_program"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/wrapper_reps_button"
                    android:layout_alignEnd="@+id/wrapper_reps_button"
                    android:layout_alignRight="@+id/wrapper_reps_button"
                    app:rv_zoom="true">

                    <TextView
                        android:id="@+id/program_change_program"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:clickable="true"
                        android:onClick="onClickChangeProgramTextView"
                        android:padding="3dp"
                        android:text="@string/change_program"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </com.andexert.library.RippleView>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer"/>


</android.support.v4.widget.DrawerLayout>

